Remove deprecated URL constructors
Java 20 has deprecated the java.net.URL constructors. While we don't target Java 20 (yet), we might as well futureproof it.